--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,6 @@ name = "pypi"
 django = "*"
 pillow = "*"
 django-allauth = "*"
-django-ckeditor = "*"
 cloudinary = "*"
 django-cloudinary-storage = "*"
 django-filter = "*"
@@ -23,6 +22,9 @@ django-crispy-forms = "*"
 celery = "*"
 django-celery-results = "*"
 xhtml2pdf = "*"
+django-filebrowser = "*"
+django-tinymce4-lite = "*"
+pyenchant = "*"
 
 [dev-packages]
 
