--- a/Pipfile
+++ b/Pipfile
@@ -4,26 +4,62 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-django = "*"
-pillow = "*"
-django-allauth = "*"
-cloudinary = "*"
-django-cloudinary-storage = "*"
-django-filter = "*"
-django-autoslug = "*"
-whitenoise = "*"
-gunicorn = "*"
-dj-database-url = "*"
-environ = "*"
-psycopg2 = "*"
-psycopg2-binary = "*"
-django-environ = "*"
-django-crispy-forms = "*"
-celery = "*"
-django-celery-results = "*"
-xhtml2pdf = "*"
-django-filebrowser = "*"
-django-tinymce = "*"
+amqp = "==5.0.6"
+arabic-reshaper = "==2.1.3"
+asgiref = "==3.4.1"
+billiard = "==3.6.4.0"
+celery = "==5.1.2"
+certifi = "==2021.5.30"
+cffi = "==1.14.6"
+charset-normalizer = "==2.0.4"
+click = "==7.1.2"
+click-didyoumean = "==0.0.3"
+click-plugins = "==1.1.1"
+click-repl = "==0.2.0"
+cloudinary = "==1.26.0"
+cryptography = "==3.4.7"
+defusedxml = "==0.7.1"
+dj-database-url = "==0.5.0"
+django-allauth = "==0.45.0"
+django-autoslug = "==1.9.8"
+django-celery-results = "==2.2.0"
+django-cloudinary-storage = "==0.3.0"
+django-crispy-forms = "==1.12.0"
+django-environ = "==0.4.5"
+django-filter = "==2.4.0"
+django-js-asset = "==1.2.2"
+django-tinymce = "==3.3.0"
+environ = "==1.0"
+future = "==0.18.2"
+gunicorn = "==20.1.0"
+html5lib = "==1.1"
+idna = "==3.2"
+jsmin = "==2.2.2"
+kombu = "==5.1.0"
+oauthlib = "==3.1.1"
+prompt-toolkit = "==3.0.19"
+psycopg2 = "==2.9.1"
+psycopg2-binary = "==2.9.1"
+pycparser = "==2.20"
+pyenchant = "==3.2.1"
+python-bidi = "==0.4.2"
+python3-openid = "==3.2.0"
+pytz = "==2021.1"
+reportlab = "==3.6.1"
+requests = "==2.26.0"
+requests-oauthlib = "==1.3.0"
+six = "==1.16.0"
+sqlparse = "==0.4.1"
+urllib3 = "==1.26.6"
+vine = "==5.0.0"
+wcwidth = "==0.2.5"
+webencodings = "==0.5.1"
+whitenoise = "==5.3.0"
+xhtml2pdf = "==0.2.5"
+Django = "==3.2.6"
+Pillow = "==8.3.1"
+PyJWT = "==2.1.0"
+PyPDF2 = "==1.26.0"
 
 [dev-packages]
 
